# Yemenhr-bot

./: .clineignore  .gitignore  GEMINI.md  QWEN.md  README.md  README.zh.md  main.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py
.clinerules/: default-rules.md
.qwen/: settings.json
.qwen/commands/: changelog.toml
.qwen/commands/git/: commit.toml
