[project]
name = "yemen-jobs-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.1",
    "aiohttp>=3.12.15",
    "colorlog>=6.9.0",
    "python-dotenv>=1.1.1",
    "python-socks>=2.7.2",
    "telethon>=1.41.2",
    "tortoise-orm>=0.25.1",
    "typing-extensions>=4.15.0",
    "yarl>=1.20.1",
]
