[metadata]
name = yemenhrbot
author = EngDawood
author_email = dawood.2.2.2@gmail.com
description = A Telegram bot that fetches job opportunities from YemenHR and sends them to a Telegram channel.
long_description = file: README.md
long_description_content_type = text/markdown
license = OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
platforms = Linux, Windows, MacOS
url = https://github.com/EngDawood/Yemenhr-bot
project_urls =
    Bug Tracker = https://github.com/EngDawood/Yemenhr-bot/issues
    Documentation = https://github.com/EngDawood/Yemenhr-bot/blob/main/README.md
    Source Code = https://github.com/EngDawood/Yemenhr-bot
    Changelog = https://github.com/EngDawood/Yemenhr-bot/blob/main/docs/CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Framework :: aiohttp
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Chat
    Topic :: Internet
    Topic :: Multimedia

[options]
zip_safe = False
python_requires = >=3.9

[options.package_data]
* = *.json, *.opml, *.sql, *.txt
yemenhrbot = ../uv.lock
